improve response body
