# controllers/task.controller.js
@@ -3,6 +3,7 @@ const User = require("../models/User");
 const Task = require("../models/Task");
 const taskController = {};
 const { sendResponse, AppError } = require("../helpers/utils");
+const { update } = require("../models/User");
 
 taskController.createTask = async (req, res, next) => {
   try {
@@ -12,7 +13,19 @@ taskController.createTask = async (req, res, next) => {
     const name = createdTask.name;
     const description = createdTask.description;
     const status = createdTask.status;
-    const assignee_id = createdTask.assignee;
+
+    const assigneeId  = createdTask?.assignee?._id || "";
+    const assigneeName  = createdTask?.assignee?.name || "";
+    const assigneeRole  = createdTask?.assignee?.role || "";
+    let assignee = {}
+    if (assigneeId) {
+        assignee = {
+        id: assigneeId,
+        name: assigneeName,
+        role: assigneeRole,
+      }
+    }
+
     const is_deleted = createdTask.is_deleted;
     const created_at = createdTask.createdAt;
     const updated_at = createdTask.updatedAt;
@@ -21,7 +34,7 @@ taskController.createTask = async (req, res, next) => {
       res,
       200,
       true,
-      {id, name, description, status, assignee_id, is_deleted, created_at, updated_at},
+      {id, name, description, status, assignee, is_deleted, created_at, updated_at},
       null,
       ""
     );
@@ -53,17 +66,32 @@ taskController.getTasks = async (req, res, next) => {
     //skip number
     let offset = page_size * (page_number - 1);
 
-    const listOfTasks = await Task.find(filter).skip(offset).limit(page_size).populate("assignee");
+    const listOfTasks = await Task.find(filter).skip(offset).limit(page_size).populate("assignee","name role");
     
     //format the result as defined response at previous stage @Swagger
     const convertedListOfTasks = [];
     listOfTasks.forEach((taskObject) => {
+
+      const assigneeId  = taskObject?.assignee?._id || "";
+      const assigneeName  = taskObject?.assignee?.name || "";
+      const assigneeRole  = taskObject?.assignee?.role || "";
+
+      let assignee = {}
+      if (assigneeId) {
+         assignee = {
+          id: assigneeId,
+          name: assigneeName,
+          role: assigneeRole,
+        }
+      }
+      
       convertedListOfTasks.push(
         {
           id: taskObject._id,
           name: taskObject.name,
           description: taskObject.description,
           status: taskObject.status,
+          assignee: assignee,
           is_deleted: taskObject.is_deleted,
           updated_at: taskObject.updatedAt,
           created_at: taskObject.createdAt,
@@ -87,7 +115,7 @@ taskController.getTasks = async (req, res, next) => {
 
 //Updating task (including: status, assign task to user, unassign task)
 taskController.updateTask = async (req, res, next) => {
-  const editKeyArr = ["status", "assignee_id"]
+  const editKeyArr = ["status", "assignee", "removeAssignee"]
   try{
     if (!req.body || !req.params.id)
       throw new AppError(400, "No Request Body / No Task Id", "Bad Request");
@@ -101,16 +129,20 @@ taskController.updateTask = async (req, res, next) => {
       if (!editKeyArr.includes(keyword)) throw new AppError(400, `Keyword ${keyword} is not accepted.`, "Bad Request")
       if(!bodyToUpdate[keyword]) delete bodyToUpdate[keyword]
     })
-    const { status: tmpStatus, assignee_id: tmpAssignee } = bodyToUpdate;
+    const { status: tmpStatus, assignee: tmpAssigneeId , removeAssignee: tmpRemoveAssignee} = bodyToUpdate;
     
     let updatedTask = await Task.findById(id);
+
     let name = updatedTask.name;
     let description = updatedTask.description;
     let status = updatedTask.status;
-    let assignee_id = updatedTask.assignee?.toString();
+    let assigneeId = updatedTask.assignee?.toString();
     let is_deleted = updatedTask.is_deleted;
     let created_at = updatedTask.createdAt;
     let updated_at = updatedTask.updatedAt;
+
+    console.log("assigneeId", assigneeId)
+    console.log("tmpAssigneeId", tmpAssigneeId)
 
     if (!updatedTask) {
       throw new AppError(404, `Task Not Found`, "Bad Request");
@@ -123,28 +155,36 @@ taskController.updateTask = async (req, res, next) => {
       return
     }
 
+     //For status change requirement
+     if (status === tmpStatus) {
+      throw new AppError(400,"You can't update the same status as current status'","Bad Request")
+      return
+    }
+
     /* For assignee requirement: 
     if assignee from query is null 
     and assignee in task that we just find is also null, 
     then we can't unassign it
     */
-    if (!assignee_id && !tmpAssignee) {
+    if (!assigneeId && (tmpRemoveAssignee === "yes")) {
       throw new AppError(400,"This task hasn't been assigned to any one, so you can't unassign it","Bad Request")
       return
     }
 
     /* For re-assign requirement: 
-    if assignee_id===tmpAssignee, 
+    if assignee===tmpAssigneeId, 
     inform that this task has been assigned to the same user
     */
-    if (assignee_id && tmpAssignee && assignee_id === tmpAssignee) {
+    if (assigneeId && tmpAssigneeId && assigneeId === tmpAssigneeId) {
       throw new AppError(400,"This task has been already assigned to required assignee, pls check again","Bad Request")
       return
     }
 
+    let assignee = {}
+
     // Newly assign the task to only 1 user
-    if (!assignee_id && tmpAssignee) {
-      let assigneeUser = await User.findById(tmpAssignee)
+    if (!assigneeId && tmpAssigneeId) {
+      let assigneeUser = await User.findById(tmpAssigneeId)
       if (!assigneeUser) { 
         throw new AppError(404,"User Not Exist", "Bad Request")
         return 
@@ -154,13 +194,26 @@ taskController.updateTask = async (req, res, next) => {
       } else {
         updatedTask.status = status
       }
-
-      updatedTask.assignee = tmpAssignee;
+      
+      updatedTask.assignee = tmpAssigneeId;
       updatedTask = await updatedTask.save()
+      updatedTask = await Task.findById(id).populate("assignee", "name role")
       name = updatedTask.name;
       description = updatedTask.description;
       status = updatedTask.status;
-      assignee_id = updatedTask.assignee;
+
+      assigneeId  = updatedTask?.assignee?._id || "";
+      const assigneeName  = updatedTask?.assignee?.name || "";
+      const assigneeRole  = updatedTask?.assignee?.role || "";
+
+      if (assigneeId) {
+         assignee = {
+          id: assigneeId,
+          name: assigneeName,
+          role: assigneeRole,
+        }
+      }
+
       is_deleted = updatedTask.is_deleted;
       created_at = updatedTask.createdAt;
       updated_at = updatedTask.updatedAt;
@@ -170,16 +223,16 @@ taskController.updateTask = async (req, res, next) => {
     }
 
     //Change assignee of 1 task
-    if (assignee_id && tmpAssignee && (assignee_id !== tmpAssignee)) {
-      let newAssigneeUser = await User.findById(tmpAssignee)
-      let oldAssigneeUser = await User.findById(assignee_id)
+    if (assigneeId && tmpAssigneeId && (assigneeId !== tmpAssigneeId)) {
+      let newAssigneeUser = await User.findById(tmpAssigneeId)
+      let oldAssigneeUser = await User.findById(assigneeId)
 
       //if new assignee user is already deleted then throw error
       if (!newAssigneeUser || newAssigneeUser.is_deleted) { 
         throw new AppError(404,"User Not Exist", "Bad Request")
         return 
       }
-
+      
       //remove task Id from oldAssigneeUser
       const removedTasks = []
       oldAssigneeUser.tasks.map((task) => {
@@ -196,13 +249,26 @@ taskController.updateTask = async (req, res, next) => {
       } else {
         updatedTask.status = status
       }
-
-      updatedTask.assignee = tmpAssignee;
+      
+      updatedTask.assignee = tmpAssigneeId;
       updatedTask = await updatedTask.save()
+      updatedTask = await Task.findById(id).populate("assignee", "name role")
       name = updatedTask.name;
       description = updatedTask.description;
       status = updatedTask.status;
-      assignee_id = updatedTask.assignee;
+
+      assigneeId  = updatedTask?.assignee?._id || "";
+      const assigneeName  = updatedTask?.assignee?.name || "";
+      const assigneeRole  = updatedTask?.assignee?.role || "";
+
+      if (assigneeId) {
+         assignee = {
+          id: assigneeId,
+          name: assigneeName,
+          role: assigneeRole,
+        }
+      }
+
       is_deleted = updatedTask.is_deleted;
       created_at = updatedTask.createdAt;
       updated_at = updatedTask.updatedAt;
@@ -214,8 +280,9 @@ taskController.updateTask = async (req, res, next) => {
     }
 
     //Unassign task
-    if (assignee_id && !tmpAssignee) {
-      let oldAssigneeUser = await User.findById(assignee_id)
+    if (assigneeId && (tmpRemoveAssignee === "yes")) {
+
+      let oldAssigneeUser = await User.findById(assigneeId)
       if (!oldAssigneeUser) {
         throw new AppError(404,"User Not Exist", "Bad Request")
         return
@@ -238,14 +305,13 @@ taskController.updateTask = async (req, res, next) => {
         updatedTask.status = status
       }
 
-      updatedTask.assignee = tmpAssignee;
+      updatedTask.assignee = null;
       updatedTask = await updatedTask.save()
 
       //update variables to use in sendResponse
       name = updatedTask.name;
       description = updatedTask.description;
       status = updatedTask.status;
-      assignee_id = updatedTask.assignee;
       is_deleted = updatedTask.is_deleted;
       created_at = updatedTask.createdAt;
       updated_at = updatedTask.updatedAt;
@@ -255,9 +321,9 @@ taskController.updateTask = async (req, res, next) => {
       res,
       200,
       true,
-      { id, name, description, status, assignee_id, is_deleted, created_at, updated_at },
+      { id, name, description, status, assignee, is_deleted, created_at, updated_at },
       null,
-      "Update Task Status success"
+      ""
     );
   
   } catch (err) {
@@ -288,13 +354,13 @@ taskController.deleteTask = async (req, res, next) => {
     const name = deletedTask.name;
     const description = deletedTask.description;
     const status = deletedTask.status;
-    const assignee_id = deletedTask.assignee;
+    const assignee = deletedTask.assignee;
     const is_deleted = deletedTask.is_deleted;
     const created_at = deletedTask.createdAt;
     const updated_at = deletedTask.updatedAt;
     
     //remove  deleted task id from user
-    const assigneeUser = await User.findById(assignee_id)
+    const assigneeUser = await User.findById(assignee)
     const removedTasks = []
       assigneeUser.tasks.map((task) => {
         if (task.toString() !== id) {
@@ -308,7 +374,7 @@ taskController.deleteTask = async (req, res, next) => {
       res,
       200,
       true,
-      {id, name, description, status, assignee_id, is_deleted, created_at, updated_at},
+      {id, name, description, status, assignee, is_deleted, created_at, updated_at},
       null,
       ""
     );
@@ -316,5 +382,44 @@ taskController.deleteTask = async (req, res, next) => {
     next(err);
   }
 };
+
+//Get task by id, with
+taskController.getTaskById = async (req, res, next) => {
+  try {
+    if (!req.params.id) throw new AppError(400, "Task Id Not Found", "Bad Request");
+
+    const { id } = req.params;
+    const taskById = await Task.findById(id).populate("assignee","name role");
+    if (!taskById)
+      sendResponse(
+        res,
+        404,
+        false,
+        null,
+        "Not found",
+        "Can't find task with this id"
+      );
+
+      let name = taskById.name;
+      let description = taskById.description;
+      let status = taskById.status;
+      let assignee = taskById.assignee;
+      let is_deleted = taskById.is_deleted;
+      let created_at = taskById.createdAt;
+      let updated_at = taskById.updatedAt;
+      
+      sendResponse(
+        res,
+        200,
+        true,
+        { id, name, description, status, assignee, is_deleted, created_at, updated_at },
+        null,
+        ""
+      );
+
+  } catch (err) {
+    next(err);
+  }
+}
 
 module.exports = taskController;
